--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@ h1,h2, button {
     margin-bottom: 20px;
 }
 
+h2 {
+    padding-left: 20%;
+    padding-right: 20%;
+}
 table {
     border-collapse: collapse;
     width: 90%;
