Making log link dynamic

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,3 @@
-.center-container {
-    text-align: center;
-}
-
 h1,
 h2,
 button {
@@ -27,7 +23,7 @@ td {
     padding: 8px;
 }
 
-th {
+th, .button_container, .center-container {
     text-align: center;
 }
 
@@ -45,4 +41,8 @@ th {
     color: white;
     background-color: #5fa695;
     margin-right: 50px;
+}
+
+#instructions_button {
+    margin-right: 10px;
 }
