--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,7 +36,7 @@ th,
     background-color: red;
 }
 
-#updateLogButton, #list_button{
+.green_button{
     width: 110px;
     height: 50px;
     font-weight: bold;
