--- a/styles/styles.css
+++ b/styles/styles.css
@@ -87,10 +87,5 @@ textarea {
 }
 
 #file-input {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-    cursor: pointer;
+    display:none;
 }
