--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,11 @@ h2 {
     padding-right: 20%;
 }
 
+/* Sizing for heading 3 */
+h3 {
+    font-size: x-large;
+}
+
 /* Styling for tables */
 table {
     border-collapse: collapse;
@@ -52,7 +57,7 @@ th,
 }
 
 /* Styling for instructions button */
-#instructions_button {
+#instructions_button, #log_button {
     margin-right: 10px;
 }
 
@@ -65,6 +70,11 @@ th,
     font-size: large;
     max-width: auto;
     margin: 0 auto;
+}
+
+.counter-container {
+    font-size: large;
+    margin-bottom: 10px;
 }
 
 ul {
