--- a/styles/iframe_styles.css
+++ b/styles/iframe_styles.css
@@ -5,13 +5,17 @@ body {
 }
 
 input[type="checkbox"] {
-    width: 50px;
-    height: 50px;
+    box-sizing: border-box;
+    width: 15%;
+    height: 40px;
+    position: relative;
 }
 
 input[type="radio"] {
-    width: 50px;
-    height: 50px;
+    box-sizing: border-box;
+    width: 15%;
+    height: 40px;
+    position: relative;
 }
 
 table {
