--- a/styles/iframe_styles.css
+++ b/styles/iframe_styles.css
@@ -1,8 +1,3 @@
-body {
-    font-size: xxx-large;
-    font-weight: bold;
-    color: gray;
-}
 
 input[type="checkbox"],
 input[type="radio"] {
@@ -17,6 +12,9 @@ input[type="radio"] {
 table {
     width: 100%;
     border-collapse: collapse;
+    font-size: xx-large;
+    font-weight: bold;
+    color: gray;
 }
 
 th,
