Scroll up button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,3 +105,16 @@ textarea {
 #settings-file-input, #log-file-input {
     display: none;
 }
+
+#scrollBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
