--- a/styles/iframe_styles.css
+++ b/styles/iframe_styles.css
@@ -2,8 +2,8 @@ input[type="checkbox"],
 input[type="radio"] {
     box-sizing: border-box;
     width: 100%;
-    max-width: 200px;
-    height: 40px;
+    max-width: 50px;
+    height: 25px;
     position: relative;
     margin-bottom: 10px;
 }
@@ -14,6 +14,18 @@ table {
     font-size: large;
     font-weight: bold;
     color: gray;
+}
+
+td label {
+    display: flex;
+    align-items: center;
+}
+
+#unitsTable, #unitTableContainer {
+    width: 100%;
+    padding-top: 40px;
+    padding-right: 5%;
+    padding-left: 5%;
 }
 
 th,
