--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,3 +118,20 @@ textarea {
     padding: 10px 20px;
     cursor: pointer;
 }
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.quick_set_input {
+    width: 40px;
+}
