Splitting unit list and quick set scripts.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,7 +102,7 @@ textarea {
     display: inline-block;
 }
 
-#settings-file-input, #log-file-input {
+#settings-file-input, #log-file-input, #loadPreSetBtn  {
     display: none;
 }
 
@@ -130,6 +130,8 @@ textarea {
     border: 1px solid #ccc;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 1000;
+    max-height: 80%;
+    overflow-y: auto;
 }
 
 .quick_set_input {
