added scroll to bottom button to log, key checker, and units
also added title to settings and modified positioning of navigation buttons to align between all pages

--- a/styles/settings_styles.css
+++ b/styles/settings_styles.css
@@ -1,3 +1,13 @@
+/* Add permanent scrollbar to prevent shifting of content */
+html {
+  overflow-y: scroll;
+}
+
+/* Spacing for buttons */
+button {
+    margin-bottom: 20px;
+}
+
 input[type="checkbox"],
 input[type="radio"] {
     box-sizing: border-box;
@@ -40,7 +50,6 @@ td {
 }
 
 .green_button {
-    font-size: large;
     color: white;
     font-weight: bold;
     margin-right: 50px;
