--- a/styles/popup_styles.css
+++ b/styles/popup_styles.css
@@ -11,3 +11,59 @@
     border: solid black;
     background-color: #5fa695;
 }
+
+[data-theme="light"] {
+    color-scheme: light;
+
+    a:link {
+        color: Blue;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: Blue;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: Blue;
+        background-color: transparent;
+        text-decoration: underline;
+    }
+
+    a:active {
+        color: Blue;
+        background-color: transparent;
+        text-decoration: underline;
+    }
+}
+
+[data-theme="dark"] {
+    color-scheme: light dark;
+
+    a:link {
+        color: LightSkyBlue;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:visited {
+        color: LightSkyBlue;
+        background-color: transparent;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: LightSkyBlue;
+        background-color: transparent;
+        text-decoration: underline;
+    }
+
+    a:active {
+        color: LightSkyBlue;
+        background-color: transparent;
+        text-decoration: underline;
+    }
+}
