added css to change the background color of a table row on hover

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,11 @@ th,
     text-align: center;
 }
 
+/* Styling for highlighting table rows on hover */
+tr:hover {
+    background-color: grey;
+}
+
 /* Styling for delete button and green button */
 #deleteLogButton, .green_button {
     color: white;
