--- a/styles/settings_styles.css
+++ b/styles/settings_styles.css
@@ -1,156 +1,158 @@
 /* Add permanent scrollbar to prevent shifting of content */
 html {
-  overflow-y: scroll;
+	overflow-y: scroll;
 }
 
 [data-theme="light"] {
-    color-scheme: light;
+	color-scheme: light;
 
-    a:link {
-        color: Blue;
-        background-color: transparent;
-        text-decoration: none;
-    }
+	a:link {
+		color: Blue;
+		background-color: transparent;
+		text-decoration: none;
+	}
 
-    a:visited {
-        color: Blue;
-        background-color: transparent;
-        text-decoration: none;
-    }
+	a:visited {
+		color: Blue;
+		background-color: transparent;
+		text-decoration: none;
+	}
 
-    a:hover {
-        color: Blue;
-        background-color: transparent;
-        text-decoration: underline;
-    }
+	a:hover {
+		color: Blue;
+		background-color: transparent;
+		text-decoration: underline;
+	}
 
-    a:active {
-        color: Blue;
-        background-color: transparent;
-        text-decoration: underline;
-    }
+	a:active {
+		color: Blue;
+		background-color: transparent;
+		text-decoration: underline;
+	}
 }
 
 [data-theme="dark"] {
-    color-scheme: dark;
+	color-scheme: dark;
 
-    a:link {
-        color: LightSkyBlue;
-        background-color: transparent;
-        text-decoration: none;
-    }
+	a:link {
+		color: LightSkyBlue;
+		background-color: transparent;
+		text-decoration: none;
+	}
 
-    a:visited {
-        color: LightSkyBlue;
-        background-color: transparent;
-        text-decoration: none;
-    }
+	a:visited {
+		color: LightSkyBlue;
+		background-color: transparent;
+		text-decoration: none;
+	}
 
-    a:hover {
-        color: LightSkyBlue;
-        background-color: transparent;
-        text-decoration: underline;
-    }
+	a:hover {
+		color: LightSkyBlue;
+		background-color: transparent;
+		text-decoration: underline;
+	}
 
-    a:active {
-        color: LightSkyBlue;
-        background-color: transparent;
-        text-decoration: underline;
-    }
+	a:active {
+		color: LightSkyBlue;
+		background-color: transparent;
+		text-decoration: underline;
+	}
 }
 
 /* Spacing for buttons */
 /* button { */
-    /* margin-bottom: 20px; */
+/* margin-bottom: 20px; */
 /* } */
 
 input[type="checkbox"],
 input[type="radio"] {
-    box-sizing: border-box;
-    width: 100%;
-    max-width: 50px;
-    height: 25px;
-    position: relative;
-    margin-bottom: 10px;
+	box-sizing: border-box;
+	width: 100%;
+	max-width: 50px;
+	height: 25px;
+	position: relative;
+	margin-bottom: 10px;
 }
 
 input[type="number"] {
-    max-width: 50px;
+	max-width: 50px;
 }
 
 table {
-    border-collapse: collapse;
-    font-size: large;
-    font-weight: bold;
-    color: gray;
-    margin-left: auto;
-    margin-right: auto;
-    table-layout: fixed;
+	border-collapse: collapse;
+	font-size: large;
+	font-weight: bold;
+	color: gray;
+	margin-left: auto;
+	margin-right: auto;
+	table-layout: fixed;
 }
 
 td label {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .center {
-    margin-left: auto;
-    margin-right: auto;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-#unitsTable, #unitTableContainer {
-    width: 100%;
-    padding-top: 40px;
-    padding-right: 5%;
-    padding-left: 5%;
+#unitsTable,
+#unitTableContainer {
+	width: 100%;
+	padding-top: 40px;
+	padding-right: 5%;
+	padding-left: 5%;
 }
 
 th,
 td {
-    border: 1px solid transparent;
-    text-align: left;
-    padding: 8px;
+	border: 1px solid transparent;
+	text-align: left;
+	padding: 8px;
 }
 
-.button_container, h1 {
-    text-align: center;
+.button_container,
+h1 {
+	text-align: center;
 }
 
 .green_button {
-    color: white;
-    font-weight: bold;
-    margin-left: 25px;
-    margin-right: 25px;
-    cursor: pointer;
-    border: solid black;
-    padding: 16px 20px;
-    background-color: #5fa695;
-    margin-bottom: 20px;
+	color: white;
+	font-weight: bold;
+	margin-left: 25px;
+	margin-right: 25px;
+	cursor: pointer;
+	border: solid black;
+	padding: 16px 20px;
+	background-color: #5fa695;
+	margin-bottom: 20px;
 }
 
 .x {
-    color: rgba(128, 128, 128, 0.0);
-    display: none;
+	color: rgba(128, 128, 128, 0.0);
+	display: none;
 }
 
 .bottom_container {
-    text-align: center;
-    margin-top: 20px;
+	text-align: center;
+	margin-top: 20px;
 }
 
 .inline_block {
-    display: inline-block;
+	display: inline-block;
 }
 
 #scrollBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: red;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    cursor: pointer;
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
+	background-color: red;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	padding: 10px 20px;
+	cursor: pointer;
 }
